# pysentinel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  readme.md
.github/workflows/: ci.yml
pysentinel/channels/: __init__.py  base.py  channel_factory.py  email.py  slack.py  telegram.py  webhook.py
pysentinel/cli/: cli.py
pysentinel/config/: loader.py  validator.py
pysentinel/core/: scanner.py  threshold.py
pysentinel/datasources/: api.py  base.py  database.py  elasticsearch.py  prometheus.py  redis.py
pysentinel/utils/: alert_db.py  constants.py  exception.py
tests/: conftest.py
tests/pysentinel/cli/: test_cli.py
tests/pysentinel/config/: test_loader.py
tests/pysentinel/core/: test_scanner.py  test_threshold.py
tests/pysentinel/fixtures/: config.yml
