[tool.poetry]
name = "pysentinel"
version = "0.1.0"
description = "A python pakcage for threshold based alerting using simple configuration."
authors = [
    {name = "Rakibul Haq",email = "haq.rakibul@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
pytest-cov = "^6.1.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
